terraform-aws/module/networking/aws_eip.tf
resource "aws_eip" "nat" {
  vpc = true

  tags = {
    Name = "nat"
  }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public-subnet[0].id

  tags = {
    Name = "nat"
  }

  depends_on = [aws_internet_gateway.my-internet-gateway]
}
